Fixed horizontal alignment of slideshow in overlay

--- a/src/styles/molecules/_molecules.overlay.scss
+++ b/src/styles/molecules/_molecules.overlay.scss
@@ -52,7 +52,6 @@
 }
 
 .m-overlay__slideshow.o-slideshow {
-  margin: 0 auto;
   max-height: 80vh;
   max-width: 105vh;
   width: 100%;
